--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
+# Dependencies
 node_modules
-dist
+.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+/dist
+
+# Environment files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Debug logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# System files
 .DS_Store
+*.pem
+.vercel
+
+# IDE
+.idea
+.vscode
+*.swp
+*.swo
+
+# Build artifacts
 server/public
 vite.config.ts.*
 *.tar.gz
+
+# Uploads
+/uploads/*
+!/uploads/.gitkeep
